hphp/test/zend/good/ext/xmlwriter/tests/bug41326.php.skipif
<?php 
if (!extension_loaded("xmlwriter")) die("skip"); 
?>